# SiamMaskCpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  common.h  config_davis.cfg  config_davis.json  config_vot.cfg  config_vot.json  convert.h  demo.cpp  numpy.h  siammask.h  state.h
SiamMask/: config_reader.h  convert.h  geometry.h  numpy.h  siammask.h  state.h
